# Micrographs_classification

./: .gitignore  README.md  pyproject.toml
Notebooks/: 01_Classify_MNIST_images_DNN.ipynb  02_Classify_micrographs_CNN-Copy1.ipynb  02_Classify_micrographs_CNN.ipynb  MNIST_DNN_CPU-Reprod.ipynb  Untitled.ipynb  marimo_Classify_MNIST_images.py  marimo_Classify_MNIST_images_diskcache.py
Notebooks/utils/: tools.py
