[project]
name = "micrograph-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.5.5",
    "marimo>=0.20.3",
    "matplotlib>=3.10.8",
    "numpy==2.4.1",
    "opencv-python>=4.13.0.92",
    "pathlib>=1.0.1",
    "py-cpuinfo>=9.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
]
